Adding basic structure for week 1

--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ccaeJS</title>
+    <title>Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Notes for a self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. These notes cover the basic core concepts of the class.">
     <meta name="author" content="Adam B. Goldstein">
@@ -27,6 +27,19 @@
       <div class="row">
         <div class="span3 bs-docs-sidebar">
           <ul class="nav nav-list bs-docs-sidenav affix">
+            <li><a href="#syllabus"><i class="icon-chevron-right"></i> Course Syllabus</a></li>
+            <li><a href="#osx"><i class="icon-chevron-right"></i> Basics of OSX</a></li>
+            <li><a href="#terminal"><i class="icon-chevron-right"></i> Using the Terminal</a></li>
+            <li><a href="#git"><i class="icon-chevron-right"></i> Using git</a></li>
+            <li><a href="#tools"><i class="icon-chevron-right"></i> Developer Tools</a></li>
+            <li><a href="#alerts"><i class="icon-chevron-right"></i> Alerts</a></li>
+            <li><a href="#variables"><i class="icon-chevron-right"></i> Variables</a></li>
+            <li><a href="#conditionals"><i class="icon-chevron-right"></i> Conditions</a></li>
+            <li><a href="#loops"><i class="icon-chevron-right"></i> Loops</a></li>
+          </ul>
+
+          <ul class="nav nav-list bs-docs-sidenav affix">
+            <li><a href="#syllabus"><i class="icon-chevron-right"></i> Course Syllabus</a></li>
             <li><a href="#osx"><i class="icon-chevron-right"></i> Basics of OSX</a></li>
             <li><a href="#terminal"><i class="icon-chevron-right"></i> Using the Terminal</a></li>
             <li><a href="#git"><i class="icon-chevron-right"></i> Using git</a></li>
@@ -39,6 +52,70 @@
         </div>
 
         <div class="span9">
+          <section id="syllabus">
+            <div class="page-header">
+              <h1>Syllabus</h1>
+            </div>
+
+            <h2>Establish common ground</h2>
+            <ul>
+              <li>Establish common familiarity with OSX</li>
+              <li>Introduce/review git</li>
+              <li>Create an account on GitHub</li>
+              <li>Clone the class project <a href="https://www.github.com/abgoldstein/ccaejs">ccaejs</a></li>
+              <li>Explore the basic tools and workflow we'll be using</li>
+            </ul>
+
+            <h2>Basic understanding of programming</h2>
+            <ul>
+              <li>Variables</li>
+              <li>Conditions</li>
+              <li>Loops</li>
+              <li>Arrays and hashes</li>
+              <li>Functions</li>
+            </ul>
+
+            <h2>A little more advanced</h2>
+            <ul>
+              <li>Closures</li>
+              <li>Anonymous functions</li>
+              <li>Callbacks</li>
+            </ul>
+
+            <h2>jQuery</h2>
+            <ul>
+              <li>Selectors</li>
+              <li>DOM manipulation</li>
+              <li>Events and bindings</li>
+              <li>Using plugins</li>
+              <li>Basic animation</li>
+            </ul>
+
+            <h2>AJAX</h2>
+            <ul>
+              <li>JSON</li>
+              <li>RESTful APIs</li>
+              <li>AJAX requests and callbacks</li>
+              <li>Synchronous vs Asynchronous</li>
+            </ul>
+
+            <h2>If there's time</h2>
+            <ul>
+              <li>CoffeeScript</li>
+              <li>Backbone.js</li>
+              <li>Canvas</li>
+              <li>Class decided goals</li>
+            </ul>
+
+            <h2>Out the door</h2>
+            <ul>
+              <li>Comfortable reading and writing JS</li>
+              <li>Ability to break apart functionality into logical components (functions, synchronicity)</li>
+              <li>Understanding of the DOM</li>
+              <li>Demonstration of basic AJAX, using JSON to manipulate the page</li>
+            </ul>
+          </section>
+
           <section id="osx">
             <div class="page-header">
               <h1>OSX Basics</h1>
@@ -59,6 +136,17 @@
             <p>
               Bloppity bleep bloop.
             </p>
+
+            <h2>Workflow</h2>
+            <h3>In class</h3>
+            <div class="bs-docs-example">
+              This is how you do it step by step
+            </div>
+
+            <h3>At home</h3>
+            <div class="bs-docs-example">
+              This is how you do it step by step
+            </div>
           </section>
 
           <section id="git">
