--- a/weeks/1/index.html
+++ b/weeks/1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>ccaeJS</title>
+    <title>Week 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. Week 1 - Getting Started">
     <meta name="author" content="Adam B. Goldstein">
@@ -44,45 +44,164 @@
   <body class="deck-container">
     <!-- Week 1 -->
     <section class="slide">
-      <h1>Week 1</h1>
+      <h1>Week 1 - Hello, everyone</h1>
     </section>
 
+    <!-- Self introduction -->
     <section class="slide">
       <h2>Hello, I'm Adam.</h2>
-
       <ul>
-        <li>Hi</li>
+        <li>Hi, my name is <a href="http://www.abgoldstein.com">Adam</a>.</li>
+        <li>I work at the <a href="http://www.mitre.org">MITRE Corporation</a>, writing open source healthcare web applications.</li>
+        <li>I mostly am a Ruby on Rails and JavaScript developer. Currently working on an iOS project.</li>
+        <li>I've played soccer all my life, I speak Japanese, and this morning I ate nothing for breakfast.</li>
       </ul>
     </section>
-
     <section class="slide">
       <h2>Hello, Class.</h2>
-
-      <pre>
-        <code>
-          test
-        </code>
-      </pre>
+      <p>Let's get to know each other a little bit. We'll go around the room twice.</p>
+      <ul>
+        <li>First, tell us anything you want about yourself. At the very least, give us your name, what you're up to in life, and what you had for breakfast this morning.</li>
+        <li>Then, tell us two truths and a lie about yourself. <strike>I'm Adam, I am the instructor for this course, and I will go first in this game.</strike></li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>Hello, JavaScript.</h2>
+      <p>Let's talk about the history later. Here is what you practically need to know right now:</p>
+      <ul>
+        <li>JavaScript is the language of web browsers. Using it, you can manipulate elements contained within the Document Object Model</li>
+        <li>JavaScript was created in 10 days in 1995 by Brendan Eich at Netscape; it shows. However, the community has adopted the good parts and matured them</li>
+        <li>JavaScript is a loosely typed language. White space does not matter. Comments are done C-style (// to comment a line, /*  */ for longer comments)</li>
+        <li>If you are comfortable with a C-like language, the basic syntax will feel immediately familiar</li>
+      </ul>
+      <blockquote>
+        <p>Deep down, JavaScript has more in common with Lisp and Scheme than with Java. It is Lisp in C's clothing. This makes JavaScript a remarkably powerful language.</p>
+        <p><cite>Douglas Crockford, <u><a href="http://shop.oreilly.com/product/9780596517748.do">Javascript: The Good Parts</a></u></cite></p>
+      </blockquote>
     </section>
 
+
+    <!-- Syllabus -->
     <section class="slide">
-      <h2>Hello, everyone else.</h2>
+      <h1>Week 1 - Syllabus</h1>
+    </section>
+    <section class="slide">
+      <h2>Establish common ground</h2>
+      <ul>
+        <li>Establish common familiarity with OSX</li>
+        <li>Introduce/review git</li>
+        <li>Create an account on GitHub</li>
+        <li>Clone the class project <a href="https://www.github.com/abgoldstein/ccaejs">ccaejs</a></li>
+        <li>Explore the basic tools and workflow we'll be using</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>Basics of programming</h2>
+      <ul>
+        <li>Variables</li>
+        <li>Conditions</li>
+        <li>Loops</li>
+        <li>Arrays and hashes</li>
+        <li>Functions</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>A little more advanced</h2>
+      <ul>
+        <li>Closures</li>
+        <li>Anonymous functions</li>
+        <li>Callbacks</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>jQuery</h2>
+      <ul>
+        <li>Selectors</li>
+        <li>DOM manipulation</li>
+        <li>Events and bindings</li>
+        <li>Using plugins</li>
+        <li>Basic animation</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>AJAX</h2>
+      <ul>
+        <li>JSON</li>
+        <li>RESTful APIs</li>
+        <li>AJAX requests and callbacks</li>
+        <li>Synchronous vs Asynchronous</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>If there's time</h2>
+      <ul>
+        <li>CoffeeScript</li>
+        <li>Backbone.js</li>
+        <li>Canvas</li>
+        <li>Class decided goals</li>
+      </ul>
+    </section>
+    <section class="slide">
+      <h2>Out the door</h2>
+      <ul>
+        <li>Comfortable reading and writing JS</li>
+        <li>Ability to break apart functionality into logical components (functions, synchronicity)</li>
+        <li>Understanding of the DOM</li>
+        <li>Demonstration of basic AJAX, using JSON to manipulate the page</li>
+      </ul>
     </section>
 
 
     <!-- Bootstrapping -->
     <section class="slide">
-      <h1>Bootstrapping</h1>
+      <h1>Week 1 - Bootstrapping</h1>
     </section>
-
     <section class="slide">
-      <h2>Interacting with these slides</h2>
-
-      <p>Press m to see a list of all the slides in the lesson</p>
-      <p>Press g to skip to a particular slide</p>
+      <h2>Eating our own dog food</h2>
+      
+      <ul>
+        <li>This entire course is self contained. These slides, <a href="../../notes/index.html">notes</a>, supporting code, and <a href="../../people/index.html">your own answers</a> will be part of one project</li>
+        <li>
+          These slides are presented with JavaScript, using <a href="http://www.imakewebthings.com/deck.js/">deck.js</a>
+          <ul>
+            <li>Navigate through the presentation with the arrow keys</li>
+            <li>Press m to see a list of all the slides in the lesson</li>
+            <li>Press g to skip to a particular slide</li>
+          </ul>
+        </li>
+      </ul>
     </section>
 
 
+    <!-- Closing discussion -->
+    <section class="slide">
+      <h1>Week 1 - Wrapping up</h1>
+    </section>
+    <section class="slide">
+      <h2>Checking in</h2>
+      <p>How did this first session feel?</p>
+      <ul>
+        <li>Was the pacing good? Too slow or too fast?</li>
+        <li>Was there anything that was unclear?</li>
+        <li>Are there any particular topics you would really like to cover?</li>
+        <li>Do you remember everyone's name? Let's run around the room one more time.</li>
+      </ul>
+      <p>If you have more to say and would prefer to do so privately, or if you just think of something later on, send me an e-mail at abgoldstein@gmail.com</p>
+    </section>
+    <section class="slide">
+      <h2>"Homework"</h2>
+      <p>Here are some non-mandatory things that would be useful for next time:</p>
+      <ul>
+        <li>Send me an e-mail so I can get in touch with everyone. Again, abgoldstein@gmail.com.</li>
+        <li>Set up the tools at home that we used today. Everything we're using is available on Windows, OSX, and Linux.</li>
+        <li>Try to pull ccaejs down at home. If you can, submit your work to me as a pull request. I'll be gathering everyone's files next Tuesday night.</li>
+        <li>Visit the project's <a href="https://www.github.com/abgoldstein/ccaejs">github page</a> and file an issue. Label it as a question.</li>
+      </ul>
+      <p>If you have more to say and would prefer to do so privately, or if you just think of something later on, send me an e-mail at abgoldstein@gmail.com</p>
+    </section>
+
+
+    <!-- Extensions -->
     <a href="#" class="deck-prev-link" title="Previous">&#8592;</a>
     <a href="#" class="deck-next-link" title="Next">&#8594;</a>
 
