Adding materials for Week 1

--- a/notes/index.html
+++ b/notes/index.html
@@ -34,19 +34,7 @@
             <li><a href="#tools"><i class="icon-chevron-right"></i> Developer Tools</a></li>
             <li><a href="#alerts"><i class="icon-chevron-right"></i> Alerts</a></li>
             <li><a href="#variables"><i class="icon-chevron-right"></i> Variables</a></li>
-            <li><a href="#conditionals"><i class="icon-chevron-right"></i> Conditions</a></li>
-            <li><a href="#loops"><i class="icon-chevron-right"></i> Loops</a></li>
-          </ul>
-
-          <ul class="nav nav-list bs-docs-sidenav affix">
-            <li><a href="#syllabus"><i class="icon-chevron-right"></i> Course Syllabus</a></li>
-            <li><a href="#osx"><i class="icon-chevron-right"></i> Basics of OSX</a></li>
-            <li><a href="#terminal"><i class="icon-chevron-right"></i> Using the Terminal</a></li>
-            <li><a href="#git"><i class="icon-chevron-right"></i> Using git</a></li>
-            <li><a href="#tools"><i class="icon-chevron-right"></i> Developer Tools</a></li>
-            <li><a href="#alerts"><i class="icon-chevron-right"></i> Alerts</a></li>
-            <li><a href="#variables"><i class="icon-chevron-right"></i> Variables</a></li>
-            <li><a href="#conditionals"><i class="icon-chevron-right"></i> Conditions</a></li>
+            <li><a href="#conditionals"><i class="icon-chevron-right"></i> Conditionals</a></li>
             <li><a href="#loops"><i class="icon-chevron-right"></i> Loops</a></li>
           </ul>
         </div>
@@ -121,10 +109,32 @@
               <h1>OSX Basics</h1>
             </div>
 
+            <h2>Just turn the thing on</h2>
+            <ul>
+              <li>In case the machines aren't on ahead of time, the power button is in the back</li>
+              <li>You can log on/off using the Apple logo in the top left hand of your screen</li>
+            </ul>
+
+            <h2>Application Equivalence</h2>
+            <ul>
+              <li>Finder is like Explorer in Windows or Nautilus (et. al.) in Linux</li>
+              <li>Terminal is like DOS in Windows or the Terminal in Linux</li>
+              <li>Spotlight is like the Start bar in Windows 7 or Gnome Do in Linux</li>
+              <li>Our text editor for the course will be Sublime Text 2</li>
+            </ul>
+
             <h2>Hotkeys</h2>
             <p>
-              Bloppity bleep bloop.
+              Cmd here mean the Command key. It may be labeled on your keyboard as just the Apple logo. Or if you are using a keyboard intended for Windows, the Command key is the Windows key.
             </p>
+            <ul>
+              <li>Copy - Cmd + C</li>
+              <li>Paste - Cmd + V</li>
+              <li>New Directory - Cmd + Shift + N</li>
+              <li>Switch Applications - Cmd + Tab</li>
+              <li>Switch Between Application Windows - Cmd + ~</li>
+              <li>Opening Spotlight - Cmd + Space</li>
+            </ul>
           </section>
 
           <section id="terminal">
@@ -132,27 +142,28 @@
               <h1>Using the Terminal</h1>
             </div>
 
-            <h2>Opening the Application</h2>
-            <p>
-              Bloppity bleep bloop.
-            </p>
-
-            <h2>Workflow</h2>
-            <h3>In class</h3>
-            <div class="bs-docs-example">
-              This is how you do it step by step
-            </div>
-
-            <h3>At home</h3>
-            <div class="bs-docs-example">
-              This is how you do it step by step
-            </div>
+            <p>The terminal can be opened by hitting Cmd + Space to open Spotlight and then typing Terminal. The first result will be Terminal.app, so you can hit enter to open the application.</p>
+            <h2>Commands</h2>
+            <ul>
+              <li>List files - ls</li>
+              <li>Change directories - cd [destination]</li>
+              <li>Show current directory - pwd</li>
+              <li>Copy - cp [source] [destination]</li>
+              <li>Move - mv [source] [destination]</li>
+              <li>Delete - rm [file]</li>
+              <li>Delete directory - rm -r [directory]</li>
+              <li>Make directory - mkdir [name]</li>
+            </ul>
           </section>
 
           <section id="git">
             <div class="page-header">
               <h1>Using Git</h1>
             </div>
+
+            <ul>
+
+            </ul>
 
             <h2>Get the stuff</h2>
             <p>
@@ -164,6 +175,8 @@
             <div class="page-header">
               <h1>Development Tools</h1>
             </div>
+
+            
 
             <h2>Text Editor</h2>
             <p>
