--- a/notes/index.html
+++ b/notes/index.html
@@ -36,7 +36,7 @@
             <li><a href="#terminal"><i class="icon-chevron-right"></i> Using the Terminal</a></li>
             <li><a href="#git"><i class="icon-chevron-right"></i> Using git</a></li>
             <li><a href="#tools"><i class="icon-chevron-right"></i> Developer Tools</a></li>
-            <li><a href="#alerts"><i class="icon-chevron-right"></i> Alerts</a></li>
+            <li><a href="#alerts"><i class="icon-chevron-right"></i> Alerts and prompts</a></li>
             <li><a href="#variables"><i class="icon-chevron-right"></i> Variables</a></li>
             <li><a href="#conditionals"><i class="icon-chevron-right"></i> Conditionals</a></li>
             <li><a href="#math"><i class="icon-chevron-right"></i> Math</a></li>
@@ -179,7 +179,22 @@
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Go to the CCAEJS project on <a href="https://www.github.com/abgoldstein/ccaejs">github</a>. Copy the 
+                    <ol>
+                      <li>
+                        Go to the CCAEJS project on <a href="https://www.github.com/abgoldstein/ccaejs">github</a>. Copy the URL. This is the location of my version of the project.
+                        <img src="../assets/images/git/git-origin.png" />
+                      </li>
+                      <li>
+                        Open the terminal and change directories to the Desktop.
+                      </li>
+                      <li>
+                        Make a new directory and name it after yourself. We'll store all of our files here to keep them separate from the rest of the users at CCAE.
+                      </li>
+                      <li>
+                        Download the ccaejs project by using the git clone command.
+                        <img src="../assets/images/git/git-clone.png" />
+                      </li>
+                    </ol>
                   </div>
                 </div>
               </div>
@@ -192,7 +207,22 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    This is how you update
+                    <p>
+                      At the beginning of every class, you should update your project to be sure you have the current materials.
+                    </p>
+
+                    <ol>
+                      <li>
+                        Open the terminal and change directories to your project folder.
+                      </li>
+                      <li>
+                        Do a git pull from the master branch of the original project.
+                        <img src="../assets/images/git/git-pull.png" />
+                      </li>
+                      <li>
+                        You should see a list of all of the recent changes since the last session.
+                      </li>
+                    </ol>
                   </div>
                 </div>
               </div>
@@ -205,7 +235,22 @@
                 </div>
                 <div id="collapseThree" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    This is how you fork
+                    <ol>
+                      <li>
+                        Sign-up/Log-in to GitHub and go to the <a href="https://www.github.com/abgoldstein/ccaejs">ccaejs</a> project.
+                      </li>
+                      <li>
+                        Click on Fork button in the top right.
+                        <img src="../assets/images/git/git-origin.png" />
+                      </li>
+                      <li>
+                        Open the terminal and change directories to your project folder. Add your fork as a remote.
+                        <img src="../assets/images/git/git-fork.png" />
+                      </li>
+                      <li>
+                        Type <code>git remote -v</code>. This shows you all the remotes that you know about. The address we used is the location of your remote, and the name you gave (in this case, shelby), is your nickname for it. Origin is the default name for the original source of the project.
+                      </li>
+                    </ol>
                   </div>
                 </div>
               </div>
@@ -218,29 +263,34 @@
                 </div>
                 <div id="collapseFour" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    This is how you save
-                  </div>
-                </div>
-              </div>
-
-              <div class="accordion-group">
-                <div class="accordion-heading">
-                  <a class="accordion-toggle" data-toggle="collapse" data-parent="#git-accordian" href="#collapseFive">
-                    How the sausage is made
-                  </a>
-                </div>
-                <div id="collapseFive" class="accordion-body collapse">
-                  <div class="accordion-inner">
-                    And then I merge everything
+                    <ol>
+                      <li>
+                        Open the terminal and change directories to the project folder.
+                      </li>
+                      <li>
+                        Do a <code>git status</code> to see what files have changed. Is it only what you were expecting? Typically, I'm only expecting you to edit files within your people folder.
+                        <img src="../assets/images/git/git-push.png" />
+                      </li>
+                      <li>
+                        Do a <code>git add</code> for all the files you want to save. You can do multiple files in one command
+                      </li>
+                      <li>
+                        Do a <code>git commit</code> to package these changes for saving. The <code>-m</code> stands for "message" and it is used to describe the changes you are saving.
+                      </li>
+                      <li>
+                        Try pulling from origin and your own fork to be sure you aren't missing anything.
+                      </li>
+                      <li>
+                        Push your commit up to your own remote. Later, I will merge it into the main project where it will go live. Your username and password here are the ones registered with GitHub.
+                      </li>
+                      <li>
+                        Note: You should not see the "authentication failed" message as is in the photo. I do not have access to save to Shelby's fork, so I'm rejected. You own your own fork, so you should see a success message.
+                      </li>
+                    </ol>
                   </div>
                 </div>
               </div>
             </div>
-
-            <h2>Get the stuff</h2>
-            <p>
-              Bloppity bleep bloop.
-            </p>
           </section>
 
           <section id="tools">
@@ -248,23 +298,32 @@
               <h1>Development Tools</h1>
             </div>
 
-            
-
             <h2>Text Editor</h2>
             <p>
-              Bloppity bleep bloop.
+              We'll be using Sublime Text 2.
             </p>
+
+            <h2>The Debugger</h2>
+            <ul>
+              <li>In Chrome: Press Cmd + Option + J</li>
+              <li>In Firefox: Press Cmd + Shift + J</li>
+            </ul>
           </section>
 
           <section id="alerts">
             <div class="page-header">
-              <h1>Alerts</h1>
+              <h1>Alerts and Prompts</h1>
             </div>
 
-            <h2>Stuff about alerts</h2>
-            <p>
-              Bloppity bleep bloop.
-            </p>
+            <h2>Giving feedback to the user</h2>
+<pre class="prettyprint linenums">
+// You can use the alert function to show the user information
+alert("Hello, world!");</pre>
+
+            <h2>Getting input from the user</h2>
+<pre class="prettyprint linenums">
+// You can use the prompt function to get information from the user
+var name = prompt("What is your name?");</pre>
           </section>
 
           <section id="variables">
@@ -272,8 +331,44 @@
               <h1>Variables</h1>
             </div>
 
-            <h2>Stuff about variables</h2>
+            <h2>Types</h2>
+            <p>
+              JavaScript is a loosely typed language. These are the types available to you:
+            </p>
+<pre class="prettyprint linenums">
+// Numbers - Integars and floats are both Numbers
+var x = 2;
+var y = 3.14;
 
+// Strings - Literally whatever you type. Double quotes or single quotes are fine.
+var name = "Murphy";
+var sentece = 'Hi, my name is Adam and I have 2 cats!';
+
+// Booleans
+var alwaysTrue = true;
+var neverTrue = false;
+
+// Arrays
+var list = [1, 2, 3];
+var mixedList = ["This is fine", 2];
+
+// Objects
+var instructor = {
+  name: "Adam",
+  favoriteHobby: "Programming"
+};</pre>
+
+            <h2>The var keyword</h2>
+            <p>The var keyword is special and pertains to scope. We'll address it later. For now, rules of thumb:</p>
+<pre class="prettyprint linenums">
+// The first time you define a variable, use var.
+var x = 2;
+
+// Whenever referring to that variable again, don't use var.
+x = "I'm a string now"</pre>
+            <p>
+              <strong>Note:</strong> Variables are dynamic in JavaScript. In the above example, x started as a number and then we redefined it as a String.
+            </p>
           </section>
 
           <section id="conditionals">
@@ -364,10 +459,28 @@ if ((this || that) && !(here || there))
               <h1>Arrays</h1>
             </div>
 
-            <h2>Stuff about arrays</h2>
             <p>
-              Bloppity bleep bloop.
+              Arrays are just lists of data. They do not have a type, so a JavaScript array can contain Numbers, Strings, Objects, and other Arrays all side by side. The lists are also dynamic, meaning you can add new elements without redefining the array.
             </p>
+
+<pre class="prettyprint linenums">
+// Creating an array
+var list = [1, 2, "three"];
+list[4] = "And now there's a fourth element";
+
+// Getting items out of an array (they are 0 indexed)
+alert(list[0]);       // Shows 1
+alert(list[3]);       // Shows "And now there's a fourth element"
+
+// Length of an array
+alert(list.length);   // Alerts 4
+
+// Adding to an array
+list.push("A new item");
+
+// Removing from an array
+list.pop();
+</pre>
           </section>
 
           <section id="loops">
@@ -375,10 +488,31 @@ if ((this || that) && !(here || there))
               <h1>Loops</h1>
             </div>
 
-            <h2>Stuff about loops</h2>
-            <p>
-              Bloppity bleep bloop.
-            </p>
+<pre class="prettyprint linenums">
+// For loop. Counting from 0 to 10.
+for (var i = 0; i < 10; i++) {
+  alert(i);
+}
+
+// While loop
+while (someCondition) 
+{
+  // Keep on doing this until
+}
+
+// Break
+while (true) {
+  break; // This would have been an infinite loop but broke tosses us out of it
+}
+
+// Continue
+for (var i = 0; i < 10; i++) {
+  if (i == 2) {
+    continue; // Do nothing at the value of 2. Instead, go to the next iteration of the loop.
+  }
+  alert("The number is " + i);
+}
+</pre>
           </section>
 
           <section id="functions">
@@ -388,7 +522,7 @@ if ((this || that) && !(here || there))
 
             <h2>Stuff about functions</h2>
             <p>
-              Bloppity bleep bloop.
+              Coming soon!
             </p>
           </section>
 
@@ -399,7 +533,7 @@ if ((this || that) && !(here || there))
 
             <h2>Stuff about hashes</h2>
             <p>
-              Bloppity bleep bloop.
+              Coming soon!
             </p>
           </section>
         </div>
