--- a/weeks/1/this-week.html
+++ b/weeks/1/this-week.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Week 1 Exercises</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. This is the people space of Adam.">
+    <meta name="description" content="A self contained curriculum and class project for the Cambridge Center for Adult Education's JavaScript class. This is the workspace for Week 1 exercises.">
     <meta name="author" content="Adam B. Goldstein">
 
     <script type="text/javascript" src="this-week.js"></script>
