Updating the main page.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
       <div class="row vertically-centered">
         <div class="span12 horizontally-centered">
           <p>
-            Oh, hello. This is the webpage of the Cambridge Center for Adult Education's class for JavaScript.
-          </p>
-          <p>
-            This site is alive. It will grow with us and expand with our knowledge and understanding of JavaScript.
-          </p>
-          <p>
-            Let's start from <a href="weeks/1/index.html">the beginning</a>.
+            Welcome back! Let's dive into <a href="weeks/2/index.html">week 2</a>.
           </p>
         </div>
       </div>
